force-app/main/default/objects/Brand_Relationship__c/Brand_Relationship__c.object-meta.xml
<CustomObject>
    <description>An Object to represent Brand/Account Ownership or other relationship type between Brands</description>
    <label>Brand Relationship</label>
    <nameField>
        <displayFormat>BR-{00000}</displayFormat>
        <label>Brand Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>