force-app/main/default/objects/Brand_Relationship__c/fields/Detail_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Detail_Relationship_Type__c</fullName>
    <inlineHelpText>Enter the relationship between the Master and the Detail</inlineHelpText>
    <label>Detail Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owned By</fullName>
                <default>true</default>
                <label>Owned By</label>
            </value>
            <value>
                <fullName>Run By</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>