force-app/main/default/objects/Brand_Relationship__c/fields/Master_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Master_Relationship_Type__c</fullName>
    <inlineHelpText>Enter the relationship between the Detail and the Master</inlineHelpText>
    <label>Master Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Detail_Relationship_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Owns</fullName>
                <default>true</default>
                <label>Owns</label>
            </value>
            <value>
                <fullName>Runs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>