force-app/main/default/objects/Brand_Relationship__c/fields/Relation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Relation_Percentage__c</fullName>
    <inlineHelpText>Enter the percentage share of the Relationship (if applicable)</inlineHelpText>
    <label>Relation Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>