force-app/main/default/objects/Brand_Relationship__c/fields/Relationship_Detail__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Detail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Enter the Account that represents the Detail Brand in the Relationship</inlineHelpText>
    <label>Relationship Detail</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Relationships (Masters)</relationshipLabel>
    <relationshipName>Relationship_Detail</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>