force-app/main/default/objects/Brand_Relationship__c/fields/Relationship_Master__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Enter the Account that represents the Master Brand in the Relationship</inlineHelpText>
    <label>Relationship Master</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Relationships (Details)</relationshipLabel>
    <relationshipName>Brand_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>